Fix scrollbar CSS

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -1,3 +1,30 @@
+// Scrollbar styling.
+
+$scrollbarWidth: 11px;
+$scrollbarHeight: 7px;
+$colorChange: 10%;
+$scrollbarBorderRadius: 50px;
+$scrollbarThumbColor: darken($brand-color, $colorChange);
+$scrollbarThumbColorOnHover: $brand-color;
+
+::-webkit-scrollbar {
+  height: $scrollbarHeight; /* Height of horizontal scrollbar. */
+  width: $scrollbarWidth; /* Width of vertical scrollbar. */
+  border: none;
+  background: $background-color;
+}
+
+::-webkit-scrollbar-thumb:horizontal,
+::-webkit-scrollbar-thumb:vertical {
+  background: $scrollbarThumbColor;
+  border-radius: $scrollbarBorderRadius;
+}
+
+::-webkit-scrollbar-thumb:horizontal:hover,
+::-webkit-scrollbar-thumb:vertical:hover {
+  background: $scrollbarThumbColorOnHover;
+}
+
 // More info on background image on viewport: https://www.freecodecamp.org/news/css-full-page-background-image-tutorial/
 $backgroundSemiTransparentColor: rgba(black, 0.85);
 body {
@@ -12,35 +39,7 @@ body {
   background-size: cover;
 }
 
-:root {
-  --scrollbarSize: 7px;
-  --scrollbarBorderRadius: 50px;
-}
-
-::-webkit-scrollbar {
-  height: var(--scrollbarSize); /* Height of horizontal scrollbar. */
-  width: var(--scrollbarSize); /* Width of vertical scrollbar. */
-  border: none;
-  background: transparent;
-}
-
-::-webkit-scrollbar-thumb:horizontal {
-  background: darken($brand-color, 10%);
-  border-radius: calc(var(--scrollbarBorderRadius));
-}
-
-::-webkit-scrollbar-thumb:horizontal:hover {
-  background: $brand-color;
-}
-
-::-webkit-scrollbar-thumb:vertical {
-  background: darken($brand-color, 10%);;
-  border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb:vertical:hover {
-  background: $brand-color;
-}
+// Other styling.
 
 .site-header {
   border-top: none;
